--- a/VGEC/VGEC.csproj
+++ b/VGEC/VGEC.csproj
@@ -145,6 +145,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\FacultyController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\VgecController.cs" />
     <Compile Include="Global.asax.cs">
@@ -166,9 +167,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AdminViewModal.cs" />
     <Compile Include="ViewModel\FacMentor.cs" />
+    <Compile Include="ViewModel\FacultyViewModel.cs" />
     <Compile Include="ViewModel\getUsers.cs" />
     <Compile Include="ViewModel\IAdminViewModel.cs" />
     <Compile Include="ViewModel\IAuthenticate.cs" />
+    <Compile Include="ViewModel\IFacultyViewModel.cs" />
     <Compile Include="ViewModel\StudentViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -213,6 +216,7 @@
     <Content Include="Views\Admin\AddSubject.cshtml" />
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Admin\AssignMentor.cshtml" />
+    <Content Include="Views\Faculty\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
